# DsmrParserLite

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1
src/DsmrParser/: DsmrParser.re2c.h
src/Test/DsmrParser/: DmrPacketRecieverTest.cpp  DsmrParserTest.cpp  Example.cpp
